--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,8 +17,8 @@
     "@heroicons/react": "^2.1.3",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/themes": "2.0.3",
-    "@starknet-react/chains": "^0.1.7",
-    "@starknet-react/core": "^2.8.1",
+    "@starknet-react/chains": "next",
+    "@starknet-react/core": "next",
     "abi-wan-kanabi": "^2.2.2",
     "blo": "^1.1.1",
     "daisyui": "^4.7.3",
